--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
     
 </body>
 <!-- connecting JS file to HTML -->
-<script type = "text/javascript"
-src = "script.js"
-src = "data.js">
-    let scrp = "script.js"
-    const data ="data.js"
-</script>
+<script src = "main.js"></script>
 
 </html>
